fixed the scrollbar on diffrent browser

--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,16 @@ p {
 
 
 }
+
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: gray;
+}
